--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,6 +3,10 @@ name: Docker Image CI
 on:
   push:
     branches: ["main"]
+    paths-ignore:
+      - "README.md"
+      - ".github/workflows/**"
+      - .gitignore
 
 jobs:
   build:
